refactor to avoid duplicate code

--- a/force-app/main/default/classes/PaymentLinkResponse.cls
+++ b/force-app/main/default/classes/PaymentLinkResponse.cls
@@ -70,17 +70,26 @@ public with sharing class PaymentLinkResponse {
 
     @NamespaceAccessible
     public Integer hashCode() {
-        Integer hashCode = 43;
-        hashCode = (17 * hashCode) + (amount == null ? 0 : System.hashCode(amount));
-        hashCode = (17 * hashCode) + (applicationInfo == null ? 0 : System.hashCode(applicationInfo));
-        hashCode = (17 * hashCode) + (expiresAt == null ? 0 : System.hashCode(expiresAt));
-        hashCode = (17 * hashCode) + (merchantAccount == null ? 0 : System.hashCode(merchantAccount));
-        hashCode = (17 * hashCode) + (reference == null ? 0 : System.hashCode(reference));
-        hashCode = (17 * hashCode) + (returnUrl == null ? 0 : System.hashCode(returnUrl));
-        hashCode = (17 * hashCode) + (themeId == null ? 0 : System.hashCode(themeId));
-        hashCode = (17 * hashCode) + (reference == null ? 0 : System.hashCode(url));
-        hashCode = (17 * hashCode) + (returnUrl == null ? 0 : System.hashCode(status));
-        hashCode = (17 * hashCode) + (themeId == null ? 0 : System.hashCode(id));
-        return hashCode;
+        List<Object> responseFields = new List<Object>{
+            amount, 
+            applicationInfo, 
+            expiresAt, 
+            merchantAccount, 
+            reference, 
+            returnUrl, 
+            themeId,
+            url,
+            status,
+            id
+        };
+        return computeHashCode(responseFields);
+    }
+
+    private Integer computeHashCode(List<Object> responseFields) {
+        Integer hash = 43;
+        for (Object field : responseFields) {
+            hash = (17 * hash) + (field == null ? 0 : System.hashCode(field));
+        }
+        return hash;
     }
 }
