Revert "fix: avoid the null check"
This reverts commit 1008fe51edb15a69c8c44f8b0d370af36acb57a2.

--- a/force-app/main/default/classes/PaymentLinkRequest.cls
+++ b/force-app/main/default/classes/PaymentLinkRequest.cls
@@ -152,7 +152,7 @@ public with sharing class PaymentLinkRequest {
 
     @NamespaceAccessible
     public Boolean equals(Object obj) {
-        if ( !(obj instanceof PaymentLinkRequest) ) return false;
+        if (obj == null || !(obj instanceof PaymentLinkRequest)) return false;
 
         PaymentLinkRequest other = (PaymentLinkRequest) obj;
         return this.allowedPaymentMethods == other.allowedPaymentMethods
