feat: including capturePspReference attribute and standardizing CheckoutRefundRequest.cls

--- a/force-app/main/default/classes/CheckoutRefundRequest.cls
+++ b/force-app/main/default/classes/CheckoutRefundRequest.cls
@@ -21,19 +21,35 @@ public with sharing class CheckoutRefundRequest implements CheckoutModificationR
 	}
 
 	/**
-	* The reference to uniquely identify a payment. This reference is used in all communication with you about the payment status. We recommend using a unique value per payment; however, it is not a requirement.\nIf you need to provide multiple references for a transaction, separate them with hyphens ("-").\nMaximum length: 80 characters.
+	* Application info
 	*/
 	@NamespaceAccessible
-	public String reference { get; set; }
+	public ApplicationInfo applicationInfo { get; set; }
 
 	@NamespaceAccessible
-	public String getReference() {
-		return reference;
+	public ApplicationInfo getApplicationInfo() {
+		return applicationInfo;
 	}
 
 	@NamespaceAccessible
-	public void setReference(String reference) {
-		this.reference = reference;
+	public void setApplicationInfo(ApplicationInfo applicationInfo) {
+		this.applicationInfo = applicationInfo;
+	}
+
+	@NamespaceAccessible
+	public String capturePspReference { get; set; }
+
+	@NamespaceAccessible
+	public List<LineItem> lineItems { get; set; }
+
+	@NamespaceAccessible
+	public List<LineItem> getLineItems() {
+		return lineItems;
+	}
+
+	@NamespaceAccessible
+	public void setLineItems(List<LineItem> lineItems) {
+		this.lineItems = lineItems;
 	}
 
 	/**
@@ -53,36 +69,70 @@ public with sharing class CheckoutRefundRequest implements CheckoutModificationR
 	}
 
 	@NamespaceAccessible
-	public List<LineItem> lineItems { get; set; }
-
-	@NamespaceAccessible
-	public List<LineItem> getLineItems() {
-		return lineItems;
-	}
-
-	@NamespaceAccessible
-	public void setLineItems(List<LineItem> lineItems) {
-		this.lineItems = lineItems;
-	}
+	public String merchantRefundReason { get; set; }
 
 	/**
-  * Application info
-  * @return applicationInfo
-  */
-  @namespaceAccessible
-  public ApplicationInfo applicationInfo { get; set; }
-
-	@namespaceAccessible
-  public ApplicationInfo getApplicationInfo() {
-    return applicationInfo;
-  }
-
-	@namespaceAccessible
-  public void setApplicationInfo(ApplicationInfo applicationInfo) {
-    this.applicationInfo = applicationInfo;
-  }
+	* The reference to uniquely identify a payment. This reference is used in all communication with you about the payment status. We recommend using a unique value per payment; however, it is not a requirement.\nIf you need to provide multiple references for a transaction, separate them with hyphens ("-").\nMaximum length: 80 characters.
+	*/
+	@NamespaceAccessible
+	public String reference { get; set; }
 
 	@NamespaceAccessible
-	public CheckoutRefundRequest(){}
+	public String getReference() {
+		return reference;
+	}
+
+	@NamespaceAccessible
+	public void setReference(String reference) {
+		this.reference = reference;
+	}
+
+	@NamespaceAccessible
+	public String store { get; set; }
+
+	@NamespaceAccessible
+	public static CheckoutRefundRequest getExample() {
+		CheckoutRefundRequest refundRequest = new CheckoutRefundRequest();
+		refundRequest.amount = Amount.getExample();
+		refundRequest.applicationInfo = ApplicationInfo.getExample();
+		refundRequest.capturePspReference = AdyenConstants.TEST_PSP_REFERENCE;
+		refundRequest.lineItems = new List<LineItem>();
+		refundRequest.merchantAccount = AdyenConstants.TEST_MERCHANT_ACCOUNT;
+		refundRequest.merchantRefundReason = 'Unknown';
+		refundRequest.reference = AdyenConstants.TEST_REFERENCE;
+		refundRequest.store = 'Test Store';
+		return refundRequest;
+	}
+
+	@NamespaceAccessible
+	public Boolean equals(Object obj) {
+		if (obj == null || !(obj instanceof CheckoutRefundRequest)) return false;
+
+		CheckoutRefundRequest other = (CheckoutRefundRequest) obj;
+		return this.amount == other.amount
+			&& this.applicationInfo == other.applicationInfo
+			&& this.capturePspReference == other.capturePspReference
+			&& this.lineItems == other.lineItems
+			&& this.merchantAccount == other.merchantAccount
+			&& this.merchantRefundReason == other.merchantRefundReason
+			&& this.reference == other.reference
+			&& this.store == other.store;
+	}
+
+	@NamespaceAccessible
+	public Integer hashCode() {
+		List<Object> requestFields = new List<Object>{
+			amount,
+			applicationInfo,
+			capturePspReference,
+			lineItems,
+			merchantAccount,
+			merchantRefundReason,
+			reference,
+			store
+		};
+		return ApiLibUtils.computeHashCode(requestFields);
+	}
+
 
 }
