--- a/force-app/main/default/classes/PaymentLinkRequest.cls
+++ b/force-app/main/default/classes/PaymentLinkRequest.cls
@@ -231,14 +231,6 @@ public with sharing class PaymentLinkRequest {
             telephoneNumber,
             themeId
         };
-        return computeHashCode(requestFields);
-    }
-
-    private static Integer computeHashCode(List<Object> requestFields) {
-        Integer hash = 43;
-        for (Object field : requestFields) {
-            hash = (17 * hash) + (field == null ? 0 : System.hashCode(field));
-        }
-        return hash;
+        return ApiLibUtils.computeHashCode(requestFields);
     }
 }
